@@ -26,7 +26,7 @@
       <h2><a name="general">General Features</a></h2>
       <ul>
         <li>ANSI/XTERM colour, MSP sound, MXP tags and images, MCCP
-compression, MSSP, MSDP, MCP, MTTS, and GMCP.</li>
+compression, MSSP, MSDP, MCP, MTTS, MPCP, and GMCP.</li>
         <li>Stable, all original code base that's extendable through
 INI options, Java, and JavaScript, even at run-time</li>
         <li>Built in web server for performing maintenance,
@@ -34,7 +34,7 @@ administration, working on areas, and accessing information</li>
         <li>Built in SMTP server for anonymous player emails, mailing
 lists, announcements, and sending passwords</li>
         <li>Use a full blown JDBC/ODBC database, or the built in flat
-file database</li>
+file database</li><li>Optional proxy server for reboots and restarts that keep players online.</li>
         <li>Optional player-based and full account systems</li>
         <li>On-line boards (journals) for public and private messaging</li>
         <li>Web-based forums built in for player interaction</li>
