@@ -1,3 +1,6 @@
+# Build 5.10.6 Release ??/??/2025
+  1.  CoffeeMud now has an optional Proxy server.  See installation guide.
+
 # Build 5.10.5 Release 07/12/2025
   *  DATABASE CHANGED! (new CMCDAC table)
   1. New Generic Commands!, see GameBuildersGuide for more information.
